Tue Oct  7 15:20:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2247_Regression/server.cpp
        * orbsvcs/tests/Bug_2248_Regression/client.h
        * orbsvcs/tests/Bug_2248_Regression/server.cpp
        * orbsvcs/tests/Bug_2285_Regression/server2.cpp
          ACE_TCHAR fixes

Tue Oct  7 15:09:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/AVStreams/Pluggable_Flow_Protocol/TimeStamp.cpp
        * orbsvcs/tests/AVStreams/Simple_Two_Stage/sender.cpp
          ACE_TCHAR fixes

Tue Oct  7 14:50:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/Connection_Manager.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/distributer.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/distributer.h
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/receiver.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/receiver.h
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/sender.cpp
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/sender.h
        * orbsvcs/tests/AVStreams/Component_Switching/distributer.cpp
        * orbsvcs/tests/AVStreams/Component_Switching/distributer.h
        * orbsvcs/tests/AVStreams/Component_Switching/sender.h
          ACE_TCHAR fixes

Tue Oct  7 10:53:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CodeSets/simple/client.cpp:
          Fixed compile error

Tue Oct  7 10:22:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
          ACE_TCHAR fixes

        * tao/PI_Server.mpc:
          Removed borland as mpc template

Tue Oct  7 08:15:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/FtEventServiceInterceptor.cpp
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/GroupInfoPublisher.cpp
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Identification_Service.cpp