@@ -37,11 +37,11 @@ parse_args (int argc, ACE_TCHAR *argv[])
       switch (c)
         {
         case 'u':
-          uipmc_url = get_opts.opt_arg ();
+          uipmc_url = ACE_TEXT_ALWAYS_CHAR(get_opts.opt_arg ());
           success |= 0x01;
           break;
         case 'o':
-          ior_output_file = get_opts.opt_arg ();
+          ior_output_file = ACE_TEXT_ALWAYS_CHAR(get_opts.opt_arg ());
           success |= 0x02;
           break;
         }
